[package]
name = "glow-core"
version = "0.1.0"
authors = ["Yesterday17 <t@yesterday17.cn>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rtnetlink = "0.5.0"
futures = "0.3.6"
tokio = {version = "0.2.0", features = ["full"]}
bytes = "0.6.0"

glow-common = {path = "../glow-common"}
glow-utils = {path = "../glow-utils"}