[package]
name = "glow-core"
version = "0.1.0"
authors = ["Yesterday17 <t@yesterday17.cn>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rtnetlink = "0.5.0"
futures = "0.3.6"
tokio = { version = "0.2.0", features = ["full"] }
bytes = "0.6.0"
rand = "0.7.3"
lru = "0.6.0"

neli = "0.5.3"
bincode = "1.3.1"

glow-common = { path = "../glow-common" }
glow-utils = { path = "../glow-utils" }