[package]
name = "glow"
version = "0.1.0"
authors = ["Yesterday17 <t@yesterday17.cn>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
dbus = "0.9.0"
signal-hook = "0.1.16"
wifiscanner = "0.5.*"
nix = "0.19.0"

futures = "0.3.6"
tokio = {version = "0.2.0", features = ["full"]}

glow-common = {path = "../glow-common"}
glow-core = {path = "../glow-core"}
glow-utils = {path = "../glow-utils"}